--- a/отчёт о компиляции.md
+++ b/отчёт о компиляции.md
@@ -1,184 +1,115 @@
-**Отчёт о компилировании программы в консоли PowerShell** 
-
-Отчёт включает:
-
-1. Настройку переменной среды `Path` для доступа к компилятору `g++`.  
-2. Основные команды и приёмы работы в PowerShell.  
-3. Процесс компиляции вашей программы.
-
----
-
-## **Отчёт о компилировании программы в PowerShell**
+## Отчёт о компилировании программы в PowerShell
 
 ### 1. Добавление пути к компилятору `g++` в переменную среды `Path`
 
-Для того чтобы использовать `g++` из любой директории в PowerShell, необходимо добавить путь к исполняемому файлу `g++.exe` в системную переменную среды **`Path`**.
+Для использования компилятора `g++` из командной строки необходимо добавить путь к исполняемому файлу `g++.exe` в системную переменную среды `Path`.
 
-#### Где находится `g++`?
-Обычно `g++` поставляется вместе с MinGW или MSYS2. Например:
-```
-C:\MinGW\bin\g++.exe
-```
-или
-```
-C:\msys64\mingw64\bin\g++.exe
-```
+Обычно `g++` устанавливается в одну из следующих директорий:
+- `C:\MinGW\bin\g++.exe`
+- `C:\msys64\mingw64\bin\g++.exe`
 
-#### Шаги добавления в `Path` (через PowerShell):
+#### Временное добавление пути (для текущей сессии PowerShell):
 
 ```powershell
-# Проверим текущее значение Path
-$env:Path -split ';'
-
-# Добавим путь временно (только для текущей сессии)
 $env:Path += ";C:\MinGW\bin"
-
-# Для постоянного добавления (требует прав администратора):
-[Environment]::SetEnvironmentVariable("Path", $env:Path + ";C:\MinGW\bin", "Machine")
 ```
 
-После этого перезапустите PowerShell. Теперь команда `g++ --version` должна работать.
+После этого проверьте доступность компилятора:
 
 ```powershell
 g++ --version
 ```
 
-Если вывод показывает версию компилятора — всё настроено правильно.
+Если вывод содержит информацию о версии GCC — компилятор доступен.
+
+#### Постоянное добавление пути:
+
+Для постоянного добавления выполните команду с правами администратора:
+
+```powershell
+[Environment]::SetEnvironmentVariable("Path", $env:Path + ";C:\MinGW\bin", "Machine")
+```
+
+После этого перезапустите PowerShell и снова проверьте `g++ --version`.
 
 ---
 
-### 2. Основные команды и приёмы в PowerShell
+### 2. Основные команды и приёмы работы в PowerShell
 
-Чтобы эффективно работать в консоли, важно знать базовые команды:
+Для эффективной работы в консоли необходимо знать базовые команды:
 
-| Команда | Назначение |
-|--------|-----------|
-| `cd <путь>` | Перемещение между директориями.<br>Пример: `cd C:\Users\Name\Documents` |
-| `cd ..` | Вернуться на уровень выше |
-| `cd \` | Перейти в корень диска |
-| `ls` или `dir` | Просмотр содержимого текущей папки |
-| `pwd` | Показать текущий путь |
-| `Tab` | Автодополнение имён файлов и папок<br>(вводите часть имени → нажмите Tab) |
-| Стрелка вверх (`↑`) | Пролистывание истории команд (удобно повторять `g++ ...`) |
-| `Ctrl+C` | Прервать выполнение программы |
+- **`cd <путь>`** — переход в указанную директорию.  
+  Пример: `cd C:\projects\quadratic`
 
-> В PowerShell `ls` — это алиас для `Get-ChildItem`, работает так же, как в Linux.
+- **`cd ..`** — переход на уровень выше.
+
+- **`cd \`** — переход в корневую директорию текущего диска.
+
+- **`ls`** или **`dir`** — отображение содержимого текущей папки.  
+  Команда `ls` является алиасом для `Get-ChildItem`.
+
+- **`pwd`** — вывод полного пути к текущей директории.
+
+- **Автодополнение с помощью клавиши Tab** — при вводе части имени файла или папки нажмите `Tab`, чтобы система автоматически дополнела имя. При наличии нескольких совпадений повторное нажатие переключает варианты.
+
+- **Стрелка вверх (↑)** — позволяет просматривать историю ранее введённых команд. Удобно для повторного запуска `g++` или программы.
+
+- **`Ctrl+C`** — прерывание выполнения текущей программы.
 
 ---
 
-### 3. Компиляция вашей программы
+### 3. Процесс компиляции программы
 
-Предположим, структура проекта такова:
+Предположим, что структура проекта следующая:
 
 ```
 C:\projects\quadratic\
-│
-├── main.cpp
-├── formulas.cpp
-├── formulas.h
+    main.cpp
+    formulas.cpp
+    formulas.h
 ```
 
-#### 🔹 Шаг 1: Перейдите в папку с программой
+#### Шаг 1: Переход в рабочую директорию
 
 ```powershell
 cd C:\projects\quadratic
 ```
 
-#### 🔹 Шаг 2: Убедитесь, что файлы на месте
+#### Шаг 2: Проверка содержимого папки
 
 ```powershell
 ls
 ```
 
-Ожидаемый вывод:
-```
-main.cpp
-formulas.cpp
-formulas.h
-```
+Убедитесь, что отображаются файлы `main.cpp`, `formulas.cpp`, `formulas.h`.
 
-#### 🔹 Шаг 3: Компиляция программы
+#### Шаг 3: Компиляция программы
 
-Согласно вашему комментарию, команда компиляции:
+Выполните команду компиляции:
 
 ```powershell
 g++ main.cpp formulas.cpp -o program.exe
 ```
 
-> 💡 Флаг `-o` задаёт имя выходного файла. Расширение `.exe` можно указать явно (Windows).
+Эта команда:
+- Компилирует `main.cpp` и `formulas.cpp`.
+- Объединяет объектные файлы.
+- Создаёт исполняемый файл `program.exe`.
 
-✅ Если ошибок нет — файл `program.exe` будет создан.
+Если ошибок нет, файл `program.exe` будет создан в текущей директории.
 
-#### 🔹 Шаг 4: Запуск программы
+#### Шаг 4: Запуск программы
 
 ```powershell
 .\program.exe
 ```
 
-> Обратите внимание: в PowerShell нужно писать `.\`, чтобы запустить исполняемый файл из текущей директории.
+В Windows для запуска исполняемого файла из текущей директории требуется указывать путь `.\`, иначе система не распознает команду.
+
+Программа запросит ввод коэффициентов `ax`, `bx^2`, `c` и выведет результат решения квадратного уравнения.
 
 ---
 
-### 4. Пример сессии в PowerShell
+### Заключение
 
-```powershell
-PS C:\Users\User> cd .\projects\quadratic
-PS C:\projects\quadratic> ls
-
-    Directory: C:\projects\quadratic
-
-Mode                 LastWriteTime         Length Name
-----                 -------------         ------ ----
--a----        10.04.2025     14:20           1234 main.cpp
--a----        10.04.2025     14:20            567 formulas.cpp
--a----        10.04.2025     14:20            321 formulas.h
-
-PS C:\projects\quadratic> g++ main.cpp formulas.cpp -o program.exe
-PS C:\projects\quadratic> .\program.exe
-```
-
-> После запуска программа запросит коэффициенты и выведет корни уравнения.
-
----
-
-### 5. Возможные ошибки и их исправление
-
-| Ошибка | Причина | Решение |
-|-------|--------|--------|
-| `g++ : The term 'g++' is not recognized` | `g++` не найден | Проверьте `Path`, установите MinGW |
-| `No such file or directory` | Неправильный путь | Используйте `ls` и `cd` для проверки |
-| Ошибки компиляции (синтаксис, типы) | Ошибки в коде | Проверьте `main.cpp` и `formulas.cpp` |
-| `.\program.exe` не запускается | Защита Windows (Smartscreen) | Нажмите «Дополнительно» → «Запустить» |
-
----
-
-### Вывод
-
-Настройка среды разработки в PowerShell позволяет эффективно компилировать и тестировать C++ программы без IDE. Ваш калькулятор квадратных уравнений успешно компилируется и работает при условии:
-
-- Корректной установки `g++`
-- Правильного пути в `Path`
-- Точного следования инструкции компиляции
-
-```bash
-g++ main.cpp formulas.cpp -o program.exe
-.\program.exe
-```
-
-Программа корректно обрабатывает все случаи квадратных уравнений, включая вырожденные (`bx=0`, `c=0`), благодаря модульной структуре с заголовочным файлом `formulas.h`.
-
----
-
-🔧 **Совет**: Сохраните команду компиляции в `.ps1` скрипте (например, `build.ps1`), чтобы не вводить её каждый раз:
-
-```powershell
-# build.ps1
-g++ main.cpp formulas.cpp -o program.exe && .\program.exe
-```
-
-Запуск:
-```powershell
-.\build.ps1
-```
-
-Удачи в разработке! 🚀
+Настройка окружения в PowerShell позволяет компилировать и запускать C++ программы напрямую из командной строки. Ваша программа корректно реализует решение квадратных уравнений всех видов, включая частные случаи. Структура с разделением на `main.cpp`, `formulas.cpp` и `formulas.h` соответствует стандартным практикам проектирования программ на C++. Компиляция осуществляется одной командой, после чего программа выполняется локально с интерактивным вводом данных.
