--- a/отчёт о компиляции/отчёт о компиляции.md
+++ b/отчёт о компиляции/отчёт о компиляции.md
@@ -1,36 +1,48 @@
 ## Отчёт о компилировании программы в PowerShell
 
-### 1. Добавление пути к компилятору `g++` в переменную среды `Path`
+### 1. Добавление пути к компилятору `g++` в переменную среды `Path` через свойства системы
 
-Для использования компилятора `g++` из командной строки необходимо добавить путь к исполняемому файлу `g++.exe` в системную переменную среды `Path`.
+Чтобы использовать компилятор `g++` из любой директории в PowerShell, необходимо добавить путь к его исполняемому файлу в системную переменную среды `Path`. Это можно сделать через графический интерфейс Windows.
 
-Обычно `g++` устанавливается в одну из следующих директорий:
-- `C:\MinGW\bin\g++.exe`
-- `C:\msys64\mingw64\bin\g++.exe`
+#### Шаги:
 
-#### Временное добавление пути (для текущей сессии PowerShell):
+1. Нажмите **Пуск** и введите в поиске:  
+   **"переменные среды"**  
+   (или "environment variables").
 
-```powershell
-$env:Path += ";C:\MinGW\bin"
-```
+2. В результатах выберите:  
+   **"Изменение переменных среды"** или **"Переменные среды"**.
 
-После этого проверьте доступность компилятора:
+3. Откроется окно **"Свойства системы"**.  
+   Внизу окна нажмите кнопку **"Переменные среды"**.
+
+![Свойства -> "Переменные среды"](image.png)
+   
+4. В разделе **"Системные переменные"** найдите строку **`Path`** и нажмите на неё **"Изменить"**.
+
+![Переменные среды](image-1.png)
+
+5. В открывшемся окне нажмите **"Добавить"** и укажите путь к папке с компилятором.  
+   Например:
+   ```
+   C:\MinGW\bin
+   ```
+   или
+   ```
+   C:\msys64\mingw64\bin
+   ```
+
+6. Нажмите **"ОК"** во всех окнах для сохранения изменений.
+
+7. Перезапустите PowerShell или командную строку, чтобы изменения вступили в силу.
+
+8. Проверьте установку:
 
 ```powershell
 g++ --version
 ```
 
-Если вывод содержит информацию о версии GCC — компилятор доступен.
-
-#### Постоянное добавление пути:
-
-Для постоянного добавления выполните команду с правами администратора:
-
-```powershell
-[Environment]::SetEnvironmentVariable("Path", $env:Path + ";C:\MinGW\bin", "Machine")
-```
-
-После этого перезапустите PowerShell и снова проверьте `g++ --version`.
+Если команда выполнится и покажет версию компилятора — путь успешно добавлен.
 
 ---
 
@@ -60,7 +72,7 @@ g++ --version
 
 ### 3. Процесс компиляции программы
 
-Предположим, что структура проекта следующая:
+Структура проекта следующая:
 
 ```
 C:\projects\quadratic\
