--- a/отчёт о компиляции/отчёт о компиляции.md
+++ b/отчёт о компиляции/отчёт о компиляции.md
@@ -1,10 +1,40 @@
 ## Отчёт о компилировании программы в PowerShell
 
-### 1. Добавление пути к компилятору `g++` в переменную среды `Path` через свойства системы
+### Установка MinGW-w64
 
-Чтобы использовать компилятор `g++` из любой директории в PowerShell, необходимо добавить путь к его исполняемому файлу в системную переменную среды `Path`. Это можно сделать через графический интерфейс Windows.
+Чтобы компилировать C++ программы в Windows с помощью командной строки, необходимо установить компилятор `g++`. Одним из наиболее доступных и распространённых решений является **MinGW-w64** — современная версия MinGW, поддерживающая 64-битные приложения и последние стандарты языка C++. Ниже приведён пошаговый процесс установки.
 
-#### Шаги:
+#### Шаг 1: Скачивание MinGW-w64
+
+1. Перейдите на страницу сборок MinGW-w64:  
+   [https://www.mingw-w64.org/downloads/#mingw-builds](https://www.mingw-w64.org/downloads/#mingw-builds)
+
+2. Рекомендуется использовать зеркало на SourceForge:  
+   [https://sourceforge.net/projects/mingw-w64/files/Toolchains%20targetting%20Win64/Personal%20Builds/mingw-builds/](https://sourceforge.net/projects/mingw-w64/files/Toolchains%20targetting%20Win64/Personal%20Builds/mingw-builds/)
+
+3. Выберите последнюю стабильную версию (например, `13.2.0`).
+
+4. Убедитесь в выборе следующих параметров:
+   - **Architecture**: `x86_64` (для 64-битных систем)
+   - **Threads**: `posix`
+   - **Exception**: `seh` (подходит для 64-битных процессоров)
+   - **Build revision**: любая актуальная версия
+
+   Пример имени файла:
+   ```
+   x86_64-13.2.0-release-posix-seh-rt_v12-rev0.7z
+   ```
+
+5. Скачайте архив и распакуйте его с помощью 7-Zip или WinRAR в удобное место на диске, например:
+   ```
+   C:\mingw64
+   ```
+
+#### Шаг 2: Добавление пути к компилятору `g++` в переменную среды `Path` через свойства системы
+
+После установки компилятора необходимо добавить путь к исполняемым файлам в системную переменную среды `Path`, чтобы можно было запускать `g++` из любого места в консоли.
+
+##### Шаги:
 
 1. Нажмите **Пуск** и введите в поиске:  
    **"переменные среды"**  
@@ -22,17 +52,12 @@
 
 ![Переменные среды](image-1.png)
 
-5. В открывшемся окне нажмите **"Добавить"** и укажите путь к папке с компилятором.  
-   Например:
+5. В открывшемся окне нажмите **"Добавить"** и укажите полный путь к папке `bin` внутри установленного каталога MinGW-w64:
    ```
-   C:\MinGW\bin
-   ```
-   или
-   ```
-   C:\msys64\mingw64\bin
+   C:\mingw64\bin
    ```
 
-6. Нажмите **"ОК"** во всех окнах для сохранения изменений.
+6. Нажмите **"ОК"** во всех окнах, чтобы сохранить изменения.
 
 7. Перезапустите PowerShell или командную строку, чтобы изменения вступили в силу.
 
@@ -42,9 +67,7 @@
 g++ --version
 ```
 
-Если команда выполнится и покажет версию компилятора — путь успешно добавлен.
-
----
+Если команда выводит информацию о версии GCC — установка прошла успешно.
 
 ### 2. Основные команды и приёмы работы в PowerShell
 
@@ -62,7 +85,7 @@ g++ --version
 
 - **`pwd`** — вывод полного пути к текущей директории.
 
-- **Автодополнение с помощью клавиши Tab** — при вводе части имени файла или папки нажмите `Tab`, чтобы система автоматически дополнела имя. При наличии нескольких совпадений повторное нажатие переключает варианты.
+- **Автодополнение с помощью клавиши Tab** — при вводе части имени файла или папки нажмите `Tab`, чтобы система автоматически дополнила имя. При наличии нескольких совпадений повторное нажатие переключает варианты.
 
 - **Стрелка вверх (↑)** — позволяет просматривать историю ранее введённых команд. Удобно для повторного запуска `g++` или программы.
 
@@ -125,3 +148,5 @@ g++ main.cpp formulas.cpp -o program.exe
 ### Заключение
 
 Настройка окружения в PowerShell позволяет компилировать и запускать C++ программы напрямую из командной строки. Ваша программа корректно реализует решение квадратных уравнений всех видов, включая частные случаи. Структура с разделением на `main.cpp`, `formulas.cpp` и `formulas.h` соответствует стандартным практикам проектирования программ на C++. Компиляция осуществляется одной командой, после чего программа выполняется локально с интерактивным вводом данных.
+
+Установка MinGW-w64 через архив предоставляет полный контроль над версией компилятора и является надёжным решением для разработки на C++ в Windows без необходимости установки крупных IDE.
