--- a/отчёт о компиляции/отчёт о компиляции.md
+++ b/отчёт о компиляции/отчёт о компиляции.md
@@ -6,23 +6,19 @@
 
 #### Шаг 1: Скачивание MinGW-w64
 
-1. Перейдите на страницу сборок MinGW-w64:  
-   [https://www.mingw-w64.org/downloads/#mingw-builds](https://www.mingw-w64.org/downloads/#mingw-builds)
+1. Перейдите на официальный ГитХаб MinGW-w64:  
+   [https://github.com/niXman/mingw-builds-binaries/releases](https://github.com/niXman/mingw-builds-binaries/releases)
 
-2. Рекомендуется использовать зеркало на SourceForge:  
+
+2. Так же можете скачать из SourceForge:  
    [https://sourceforge.net/projects/mingw-w64/files/Toolchains%20targetting%20Win64/Personal%20Builds/mingw-builds/](https://sourceforge.net/projects/mingw-w64/files/Toolchains%20targetting%20Win64/Personal%20Builds/mingw-builds/)
+   Однако тут не актуальные версии, могут быть проблемы.
 
-3. Выберите последнюю стабильную версию (например, `13.2.0`).
-
-4. Убедитесь в выборе следующих параметров:
-   - **Architecture**: `x86_64` (для 64-битных систем)
-   - **Threads**: `posix`
-   - **Exception**: `seh` (подходит для 64-битных процессоров)
-   - **Build revision**: любая актуальная версия
+3. Выберите последнюю стабильную версию (например, `15.2.0`).
 
    Пример имени файла:
    ```
-   x86_64-13.2.0-release-posix-seh-rt_v12-rev0.7z
+   x86_64-15.2.0-release-mcf-seh-ucrt-rt_v13-rev0.7z
    ```
 
 5. Скачайте архив и распакуйте его с помощью 7-Zip или WinRAR в удобное место на диске, например:
