--- a/отчёт о компиляции/отчёт о компиляции.md
+++ b/отчёт о компиляции/отчёт о компиляции.md
@@ -144,6 +144,6 @@ g++ main.cpp formulas.cpp -o program.exe
 
 ### Заключение
 
-Настройка окружения в PowerShell позволяет компилировать и запускать C++ программы напрямую из командной строки. Ваша программа корректно реализует решение квадратных уравнений всех видов, включая частные случаи. Структура с разделением на `main.cpp`, `formulas.cpp` и `formulas.h` соответствует стандартным практикам проектирования программ на C++. Компиляция осуществляется одной командой, после чего программа выполняется локально с интерактивным вводом данных.
+Настройка окружения в PowerShell позволяет компилировать и запускать C++ программы напрямую из командной строки. Данная программа корректно реализует решение квадратных уравнений. Компиляция осуществляется одной командой, после чего программа выполняется локально с интерактивным вводом данных.
 
 Установка MinGW-w64 через архив предоставляет полный контроль над версией компилятора и является надёжным решением для разработки на C++ в Windows без необходимости установки крупных IDE.
