--- a/отчёт о компиляции/отчёт о компиляции.md
+++ b/отчёт о компиляции/отчёт о компиляции.md
@@ -64,7 +64,7 @@
 g++ --version
 ```
 
-Если команда выводит информацию о версии GCC — установка прошла успешно.
+Если команда выводит информацию о версии G++ — установка прошла успешно.
 
 ### 2. Основные команды и приёмы работы в PowerShell
 
