--- a/отчёт о компиляции/отчёт о компиляции.md
+++ b/отчёт о компиляции/отчёт о компиляции.md
@@ -142,8 +142,170 @@ g++ main.cpp formulas.cpp -o program.exe
 
 ---
 
-### Заключение
+### 4. Оптимизация: уменьшение размера исполняемого файла
 
-Настройка окружения в PowerShell позволяет компилировать и запускать C++ программы напрямую из командной строки. Данная программа корректно реализует решение квадратных уравнений. Компиляция осуществляется одной командой, после чего программа выполняется локально с интерактивным вводом данных.
+Для уменьшения размера исполняемого файла можно использовать флаги оптимизации и удаления отладочной информации:
 
-Установка MinGW-w64 через архив предоставляет полный контроль над версией компилятора и является надёжным решением для разработки на C++ в Windows без необходимости установки крупных IDE.
+```powershell
+g++ -O2 -s main.cpp formulas.cpp -o program.exe
+```
+
+- `-O2` — включает оптимизации, улучшающие производительность и уменьшающие размер.
+- `-s` — удаляет отладочную информацию.
+
+---
+
+### 5. Статические библиотеки
+
+Статическая библиотека — это файл, содержащий **скомпилированный код**, который можно **встроить в исполняемый файл** во время сборки. В Windows такие библиотеки имеют расширение `.lib`, в Linux — `.a`.
+
+#### Зачем они нужны?
+
+- Ускоряют сборку проектов.
+- Позволяют **разделять код** на модули.
+- Упрощают **повторное использование** компонентов.
+
+---
+
+#### Создание статической библиотеки из `formulas.cpp`
+
+##### Шаг 1: Компиляция `formulas.cpp` в объектный файл
+
+```powershell
+g++ -c formulas.cpp -o formulas.o
+```
+
+##### Шаг 2: Создание статической библиотеки
+
+```powershell
+ar rcs libformulas.a formulas.o
+```
+
+- `ar` — инструмент для создания архивов (библиотек).
+- `rcs` — флаги: `r` (вставить), `c` (создать), `s` (создать индекс).
+- `libformulas.a` — имя библиотеки.
+
+##### Шаг 3: Компиляция и линковка с библиотекой
+
+```powershell
+g++ main.cpp -L. -lformulas -o program.exe
+```
+
+- `-L.` — указывает искать библиотеки в текущей папке.
+- `-lformulas` — подключает `libformulas.a`.
+
+---
+
+#### Итог
+
+Теперь код из `formulas.cpp` будет встроен в `program.exe`, и не нужно будет держать `formulas.dll` или `formulas.o` рядом с исполняемым файлом. Это удобно при **распространении программы**.
+
+---
+
+### 6. Оптимизация: уменьшение размера исполняемого файла
+
+Для уменьшения размера исполняемого файла можно использовать флаги оптимизации и удаления отладочной информации:
+
+```powershell
+g++ -O2 -s main.cpp formulas.cpp -o program.exe
+```
+
+- `-O2` — включает оптимизации, улучшающие производительность и уменьшающие размер.
+- `-s` — удаляет отладочную информацию.
+
+---
+
+### 7. Использование CMake
+
+CMake позволяет упростить процесс сборки проекта, особенно при добавлении новых файлов или библиотек.
+
+#### Пример `CMakeLists.txt`:
+
+```cmake
+cmake_minimum_required(VERSION 3.10)
+project(QuadraticCalculator)
+
+set(CMAKE_CXX_STANDARD 17)
+
+add_executable(program main.cpp formulas.cpp)
+
+# Для статической линковки
+set(CMAKE_EXE_LINKER_FLAGS "-static -s")
+
+# Для оптимизации
+target_compile_options(program PRIVATE -O2)
+```
+
+#### Компиляция через CMake:
+
+```powershell
+mkdir build
+cd build
+cmake ..
+cmake --build .
+```
+
+Создаст исполняемый файл `program.exe` в папке `build`.
+
+---
+
+### 8. Использование Visual Studio (IDE)
+
+Visual Studio — мощная IDE от Microsoft. Для работы с C++ можно использовать **Visual Studio Community** (бесплатно).
+
+- Установите Visual Studio с компонентами **C++ Desktop Development**.
+- Создайте новый проект: **Console Application**.
+- Добавьте в проект файлы `main.cpp`, `formulas.cpp`, `formulas.h`, `quadratic_tests.cpp`.
+- Скомпилируйте и запустите.
+
+**Преимущества:**
+- Встроенная отладка.
+- Интеграция с Git.
+- Управление проектом через GUI.
+
+---
+
+### 9. Использование Git для управления проектом
+
+Git — система контроля версий, позволяющая отслеживать изменения в коде и работать в команде.
+
+#### Инициализация репозитория:
+
+```powershell
+git init
+git add .
+git commit -m "Initial commit: quadratic calculator with formulas module"
+```
+
+#### Пример `.gitignore`:
+
+```
+# Executables
+*.exe
+*.out
+
+# Build directories
+build/
+
+# Logs
+*.log
+
+# VS Code settings
+.vscode/
+```
+
+---
+
+### 10. Заключение
+
+Настройка окружения в PowerShell позволяет компилировать и запускать C++ программы напрямую из командной строки. Данная программа — **калькулятор квадратных уравнений** — корректно реализует решение уравнения `ax² + bx + c = 0`.
+
+Компиляция осуществляется одной командой, после чего программа выполняется локально с интерактивным вводом данных.
+
+Также показано, как:
+- Создать и использовать **статическую библиотеку**.
+- Уменьшить размер исполняемого файла.
+- Собирать проект с помощью **CMake**.
+- Работать с **Visual Studio** и **Git**.
+
+Это делает проект **масштабируемым, переносимым и удобным для разработки**.
