--- a/отчёт о компиляции/отчёт о компиляции.md
+++ b/отчёт о компиляции/отчёт о компиляции.md
@@ -202,20 +202,7 @@ g++ main.cpp -L. -lformulas -o program.exe
 
 ---
 
-### 6. Оптимизация: уменьшение размера исполняемого файла
-
-Для уменьшения размера исполняемого файла можно использовать флаги оптимизации и удаления отладочной информации:
-
-```powershell
-g++ -O2 -s main.cpp formulas.cpp -o program.exe
-```
-
-- `-O2` — включает оптимизации, улучшающие производительность и уменьшающие размер.
-- `-s` — удаляет отладочную информацию.
-
----
-
-### 7. Использование CMake
+### 6. Использование CMake
 
 CMake позволяет упростить процесс сборки проекта, особенно при добавлении новых файлов или библиотек.
 
@@ -249,7 +236,7 @@ cmake --build .
 
 ---
 
-### 8. Использование Visual Studio (IDE)
+### 7. Использование Visual Studio (IDE)
 
 Visual Studio — мощная IDE от Microsoft. Для работы с C++ можно использовать **Visual Studio Community** (бесплатно).
 
@@ -265,7 +252,7 @@ Visual Studio — мощная IDE от Microsoft. Для работы с C++ м
 
 ---
 
-### 9. Использование Git для управления проектом
+### 8. Использование Git для управления проектом
 
 Git — система контроля версий, позволяющая отслеживать изменения в коде и работать в команде.
 
@@ -296,7 +283,7 @@ build/
 
 ---
 
-### 10. Заключение
+### Заключение
 
 Настройка окружения в PowerShell позволяет компилировать и запускать C++ программы напрямую из командной строки. Данная программа — **калькулятор квадратных уравнений** — корректно реализует решение уравнения `ax² + bx + c = 0`.
 
