--- a/отчёт о компиляции/отчёт о компиляции.md
+++ b/отчёт о компиляции/отчёт о компиляции.md
@@ -144,14 +144,52 @@ g++ main.cpp formulas.cpp -o program.exe
 
 ### 4. Оптимизация: уменьшение размера исполняемого файла
 
-Для уменьшения размера исполняемого файла можно использовать флаги оптимизации и удаления отладочной информации:
+При разработке программ, особенно для встраиваемых систем, дистрибутивов с ограниченным объёмом или просто для повышения эффективности, часто требуется уменьшить размер итогового исполняемого файла. Компилятор GCC предоставляет ряд флагов и подходов для достижения этой цели.
+
+#### Основные флаги компиляции
 
 ```powershell
 g++ -O2 -s main.cpp formulas.cpp -o program.exe
 ```
 
-- `-O2` — включает оптимизации, улучшающие производительность и уменьшающие размер.
-- `-s` — удаляет отладочную информацию.
+Разберём каждый элемент подробнее.
+
+#### -O2 — уровень оптимизации
+
+Флаг `-O2` включает умеренный уровень оптимизации, направленный как на повышение производительности, так и на уменьшение размера кода по сравнению с `-O0` (отсутствие оптимизации). Он активирует такие оптимизации, как:
+
+- Удаление мёртвого кода (dead code elimination)
+- Встраивание небольших функций (inlining)
+- Упрощение выражений (constant folding, propagation)
+- Оптимизация циклов
+- Удаление избыточных вычислений
+
+Примечание: если главная цель — минимальный размер, а не максимальная скорость, лучше использовать флаг `-Os` (optimize for size).
+
+Пример:
+```powershell
+g++ -Os -s main.cpp formulas.cpp -o program.exe
+```
+
+#### -s — удаление символьной (отладочной) информации
+
+Флаг `-s` передаёт линковщику (`ld`) опцию `--strip-all`, которая полностью удаляет из исполняемого файла:
+
+- Таблицы символов (symbol tables)
+- Отладочную информацию (debug info)
+- Имена функций и переменных, не нужные для выполнения
+
+Это может значительно уменьшить размер `.exe`-файла, особенно если в проекте много функций и глобальных переменных.
+
+Важно: после использования `-s` вы не сможете отлаживать программу в отладчике (например, GDB), так как вся отладочная информация будет утеряна.
+
+Альтернатива: если вы хотите сохранить отладочную информацию отдельно, можно использовать внешние инструменты:
+```powershell
+g++ -g -Os main.cpp formulas.cpp -o program_with_debug.exe
+strip --strip-debug --strip-unneeded program_with_debug.exe -o program.exe
+objcopy --only-keep-debug program_with_debug.exe program.debug
+```
+Таким образом, `program.exe` будет компактным, а `program.debug` — содержать отладочную информацию для последующего анализа.
 
 ---
 
@@ -169,11 +207,15 @@ g++ -O2 -s main.cpp formulas.cpp -o program.exe
 
 #### Создание статической библиотеки из `formulas.cpp`
 
+Статическая библиотека — это архив объектных файлов, который встраивается непосредственно в исполняемый файл на этапе линковки. Это позволяет распространять программу как единый файл без дополнительных зависимостей.
+
 ##### Шаг 1: Компиляция `formulas.cpp` в объектный файл
 
 ```powershell
 g++ -c formulas.cpp -o formulas.o
 ```
+
+Флаг `-c` указывает компилятору остановиться после этапа компиляции и не выполнять линковку. В результате создаётся объектный файл `formulas.o`, содержащий машинный код функций из `formulas.cpp`, но без разрешения внешних ссылок.
 
 ##### Шаг 2: Создание статической библиотеки
 
@@ -181,9 +223,12 @@ g++ -c formulas.cpp -o formulas.o
 ar rcs libformulas.a formulas.o
 ```
 
-- `ar` — инструмент для создания архивов (библиотек).
-- `rcs` — флаги: `r` (вставить), `c` (создать), `s` (создать индекс).
-- `libformulas.a` — имя библиотеки.
+- `ar` — утилита для работы с архивами (в данном контексте — со статическими библиотеками).
+- Флаги:
+  - `r` — заменить или добавить файлы в архив.
+  - `c` — создать архив, если он не существует (без предупреждения).
+  - `s` — создать индекс (таблицу символов), что ускоряет последующую линковку.
+- `libformulas.a` — стандартное имя статической библиотеки в Unix-подобных системах и MinGW. Префикс `lib` и расширение `.a` обязательны для корректной работы с флагом `-l`.
 
 ##### Шаг 3: Компиляция и линковка с библиотекой
 
@@ -191,68 +236,83 @@ ar rcs libformulas.a formulas.o
 g++ main.cpp -L. -lformulas -o program.exe
 ```
 
-- `-L.` — указывает искать библиотеки в текущей папке.
-- `-lformulas` — подключает `libformulas.a`.
+- `-L.` — указывает линковщику искать библиотеки в текущем каталоге (`.`).
+- `-lformulas` — указывает использовать библиотеку с именем `libformulas.a`. Компилятор автоматически добавляет префикс `lib` и расширение `.a`.
+- В результате код из `formulas.o` будет включён непосредственно в `program.exe`.
+
+> Примечание: если в `main.cpp` используются функции из `formulas.cpp`, необходимо, чтобы соответствующие объявления (заголовочные файлы, например `formulas.h`) были доступны на этапе компиляции. В противном случае возникнет ошибка «undefined reference» или «implicit declaration».
+
+##### Дополнительные рекомендации
+
+- **Заголовочный файл**: рекомендуется создать файл `formulas.h`, содержащий объявления всех функций из `formulas.cpp`, и включать его в `main.cpp` с помощью `#include "formulas.h"`. Это обеспечивает корректную проверку типов и сигнатур функций.
+  
+- **Оптимизация при создании библиотеки**: для уменьшения итогового размера можно скомпилировать объектный файл с флагами оптимизации:
+  ```powershell
+  g++ -Os -c formulas.cpp -o formulas.o
+  ```
+
+- **Проверка содержимого библиотеки**: чтобы убедиться, что библиотека содержит нужные символы, можно использовать:
+  ```powershell
+  nm libformulas.a
+  ```
+  Эта команда покажет список всех символов (функций, переменных) в архиве.
+
+- **Порядок линковки**: при использовании нескольких библиотек порядок их указания в команде линковки может иметь значение. Библиотеки, зависящие от других, следует указывать **после** тех, от которых они зависят.
 
 ---
 
-#### Итог
-
-Теперь код из `formulas.cpp` будет встроен в `program.exe`, и не нужно будет держать `formulas.dll` или `formulas.o` рядом с исполняемым файлом. Это удобно при **распространении программы**.
+Конечно. Вот дополненный и структурированный текст без эмодзи и избыточного оформления:
 
 ---
 
-### 6. Использование CMake
+### 6. Использование Visual Studio (IDE)
 
-CMake позволяет упростить процесс сборки проекта, особенно при добавлении новых файлов или библиотек.
+Visual Studio — мощная интегрированная среда разработки (IDE) от Microsoft, поддерживающая разработку на C++, C#, Python и других языках. Для работы с C++ можно использовать **Visual Studio Community**, которая распространяется бесплатно и включает все необходимые инструменты для разработки настольных приложений на C++.
 
-#### Пример `CMakeLists.txt`:
+#### Настройка и создание проекта
 
-```cmake
-cmake_minimum_required(VERSION 3.10)
-project(QuadraticCalculator)
+1. **Установка**  
+   При установке Visual Studio обязательно выберите рабочую нагрузку **Desktop development with C++** («Разработка классических приложений на C++»). Эта рабочая нагрузка включает:
+   - Компилятор MSVC (Microsoft Visual C++)
+   - Библиотеки времени выполнения C++
+   - Отладчик
+   - Инструменты сборки (MSBuild)
+   - Редактор кода с поддержкой IntelliSense
 
-set(CMAKE_CXX_STANDARD 17)
+2. **Создание проекта**  
+   - Запустите Visual Studio.
+   - Выберите **Create a new project**.
+   - Выберите шаблон **Console App** (или **Empty Project**, если требуется полный контроль над структурой).
+   - Укажите имя проекта и расположение на диске.
 
-add_executable(program main.cpp formulas.cpp)
+3. **Добавление файлов**  
+   В обозревателе решений (Solution Explorer):
+   - Щёлкните правой кнопкой мыши по проекту → **Add** → **Existing Item…**
+   - Добавьте файлы: `main.cpp`, `formulas.cpp`, `formulas.h`, `quadratic_tests.cpp`.
+   - Убедитесь, что заголовочный файл `formulas.h` включён в соответствующие `.cpp`-файлы с помощью директивы `#include "formulas.h"`.
 
-# Для статической линковки
-set(CMAKE_EXE_LINKER_FLAGS "-static -s")
+4. **Компиляция и запуск**  
+   - Нажмите **Ctrl+F5** для запуска без отладки или **F5** для запуска с отладчиком.
+   - Visual Studio автоматически скомпилирует все файлы проекта и соберёт исполняемый файл.
 
-# Для оптимизации
-target_compile_options(program PRIVATE -O2)
-```
+#### Преимущества использования Visual Studio
 
-#### Компиляция через CMake:
+- **Встроенная отладка**: пошаговое выполнение кода, точки останова (breakpoints), просмотр значений переменных, стек вызовов.
+- **IntelliSense**: интеллектуальное автозавершение кода, подсказки по сигнатурам функций, навигация по определениям.
+- **Интеграция с системами контроля версий**: поддержка Git прямо в интерфейсе IDE (коммиты, пуллы, ветвление и т.д.).
+- **Управление проектом через графический интерфейс**: удобное добавление/удаление файлов, настройка свойств сборки (конфигурации Debug/Release), управление зависимостями.
+- **Анализ кода и диагностика**: встроенные инструменты для выявления потенциальных ошибок, утечек памяти, неиспользуемых переменных.
+- **Поддержка современных стандартов C++**: можно указать версию стандарта (C++17, C++20 и др.) в свойствах проекта.
 
-```powershell
-mkdir build
-cd build
-cmake ..
-cmake --build .
-```
+#### Дополнительные возможности
 
-Создаст исполняемый файл `program.exe` в папке `build`.
-
----
-
-### 7. Использование Visual Studio (IDE)
-
-Visual Studio — мощная IDE от Microsoft. Для работы с C++ можно использовать **Visual Studio Community** (бесплатно).
-
-- Установите Visual Studio с компонентами **C++ Desktop Development**.
-- Создайте новый проект: **Console Application**.
-- Добавьте в проект файлы `main.cpp`, `formulas.cpp`, `formulas.h`, `quadratic_tests.cpp`.
-- Скомпилируйте и запустите.
-
-**Преимущества:**
-- Встроенная отладка.
-- Интеграция с Git.
-- Управление проектом через GUI.
+- **Конфигурации сборки**: по умолчанию создаются две конфигурации — **Debug** (с отладочной информацией, без оптимизации) и **Release** (с оптимизацией, без отладочной информации). Переключение между ними осуществляется в верхней панели.
+- **Настройка компилятора**: через **Project Properties** можно задать дополнительные флаги компиляции, пути к заголовочным файлам, параметры линковки и т.д.
+- **Тестирование**: если используется `quadratic_tests.cpp` для модульных тестов, можно интегрировать его в проект и запускать как часть процесса сборки или настроить отдельный тестовый проект с использованием фреймворков, таких как Google Test (поддерживается через NuGet или вручную).
 
 ---
 
-### 8. Использование Git для управления проектом
+### 7. Использование Git для управления проектом
 
 Git — система контроля версий, позволяющая отслеживать изменения в коде и работать в команде.
 
@@ -285,14 +345,12 @@ build/
 
 ### Заключение
 
-Настройка окружения в PowerShell позволяет компилировать и запускать C++ программы напрямую из командной строки. Данная программа — **калькулятор квадратных уравнений** — корректно реализует решение уравнения `ax² + bx + c = 0`.
+В ходе работы была настроена среда для разработки на C++ в Windows: установлен компилятор MinGW-w64, настроены переменные среды и освоены основные команды PowerShell. Программа для решения квадратных уравнений была успешно скомпилирована как через командную строку, так и в среде Visual Studio.
 
-Компиляция осуществляется одной командой, после чего программа выполняется локально с интерактивным вводом данных.
+Рассмотрены ключевые аспекты сборки:
+- Базовая компиляция нескольких исходных файлов
+- Оптимизация размера исполняемого файла с помощью флагов `-Os` и `-s`
+- Создание и использование статических библиотек
+- Альтернативные подходы к сборке через IDE
 
-Также показано, как:
-- Создать и использовать **статическую библиотеку**.
-- Уменьшить размер исполняемого файла.
-- Собирать проект с помощью **CMake**.
-- Работать с **Visual Studio** и **Git**.
-
-Это делает проект **масштабируемым, переносимым и удобным для разработки**.
+Освоение этих методов позволяет эффективно работать над проектами любой сложности, выбирая оптимальный способ сборки в зависимости от требований к размеру программы, производительности и удобству разработки.
