--- a/Конспекты/отчёт о компиляции/отчёт о компиляции.md
+++ b/Конспекты/отчёт о компиляции/отчёт о компиляции.md
@@ -1,4 +1,4 @@
-## Отчёт о компилировании программы в PowerShell
+## Отчёт о компилировании программы в PowerShell (Обновлённый)
 
 ### Установка MinGW-w64
 
@@ -12,8 +12,8 @@
 
 2. Так же можете скачать из SourceForge:  
    [https://sourceforge.net/projects/mingw-w64/files/Toolchains%20targetting%20Win64/Personal%20Builds/mingw-builds/](https://sourceforge.net/projects/mingw-w64/files/Toolchains%20targetting%20Win64/Personal%20Builds/mingw-builds/)
-   
-   Однако тут не актуальные версии, могут быть проблемы.
+
+   Однако тут не актуальные версии, могут быть проблемы. (На момент 07.11.2025 последняя версия на GitHub - 15.2.0-rt_v13-rev0, а на SourceForge - 14.2.0-rt_v12-rev2).
 
 3. Выберите последнюю стабильную версию (например, `15.2.0`).
 
@@ -44,7 +44,7 @@
    Внизу окна нажмите кнопку **"Переменные среды"**.
 
 ![Свойства -> "Переменные среды"](image.png)
-   
+
 4. В разделе **"Системные переменные"** найдите строку **`Path`** и нажмите на неё **"Изменить"**.
 
 ![Переменные среды](image-1.png)
@@ -66,9 +66,11 @@ g++ --version
 
 Если команда выводит информацию о версии G++ — установка прошла успешно.
 
-### 2. Основные команды и приёмы работы в PowerShell
+### 2. Основные команды и приёмы работы в PowerShell (и оболочке Windows в целом)
 
-Для эффективной работы в консоли необходимо знать базовые команды:
+Для эффективной работы в консоли необходимо знать базовые команды. Это относится как к PowerShell, так и к Command Prompt (cmd), а также к другим оболочкам.
+
+#### Работа с файлами и директориями:
 
 - **`cd <путь>`** — переход в указанную директорию.  
   Пример: `cd C:\projects\quadratic`
@@ -78,15 +80,39 @@ g++ --version
 - **`cd \`** — переход в корневую директорию текущего диска.
 
 - **`ls`** или **`dir`** — отображение содержимого текущей папки.  
-  Команда `ls` является алиасом для `Get-ChildItem`.
+  Команда `ls` является алиасом для `Get-ChildItem` в PowerShell, `dir` — команда cmd.
 
-- **`pwd`** — вывод полного пути к текущей директории.
+- **`pwd`** или **`cd`** (без аргументов) — вывод полного пути к текущей директории.
+
+- **`mkdir <имя_папки>`** или **`md <имя_папки>`** — создание новой директории.
+
+- **`rm <имя_файла>`** или **`del <имя_файла>`** — удаление файла. `rm` в PowerShell, `del` в cmd.
+
+- **`cp <источник> <назначение>`** или **`copy <источник> <назначение>`** — копирование файлов. `cp` в PowerShell, `copy` в cmd.
+
+- **`mv <старое_имя> <новое_имя>`** или **`ren <старое_имя> <новое_имя>`** — перемещение/переименование файлов. `mv` в PowerShell, `ren` в cmd.
+
+#### Работа с консолью (Консоль):
 
 - **Автодополнение с помощью клавиши Tab** — при вводе части имени файла или папки нажмите `Tab`, чтобы система автоматически дополнила имя. При наличии нескольких совпадений повторное нажатие переключает варианты.
 
 - **Стрелка вверх (↑)** — позволяет просматривать историю ранее введённых команд. Удобно для повторного запуска `g++` или программы.
 
-- **`Ctrl+C`** — прерывание выполнения текущей программы.
+- **Стрелка вниз (↓)** — позволяет просматривать историю ранее введённых команд в обратном порядке.
+
+- **`Ctrl+C`** — прерывание выполнения текущей программы или команды.
+
+- **`Ctrl+L`** (в PowerShell) — очистка экрана консоли (аналог `clear` в других оболочках).
+
+- **`cls`** (в cmd и PowerShell) — очистка экрана консоли.
+
+- **`type <имя_файла>`** (в cmd) или **`Get-Content <имя_файла>`** (в PowerShell, сокращённо `cat <имя_файла>`) — вывод содержимого текстового файла в консоль.
+
+- **`echo <текст>`** — вывод текста на экран.
+
+- **`more <имя_файла>`** — постраничный вывод содержимого файла.
+
+- **`help <команда>`** (в cmd) или **`Get-Help <команда>`** (в PowerShell, сокращённо `man <команда>`) — получение справки по команде.
 
 ---
 
@@ -142,9 +168,9 @@ g++ main.cpp formulas.cpp -o program.exe
 
 ---
 
-### 4. Оптимизация: уменьшение размера исполняемого файла
+### 4. Оптимизация: уменьшение размера исполняемого файла (Минимизация размера)
 
-При разработке программ, особенно для встраиваемых систем, дистрибутивов с ограниченным объёмом или просто для повышения эффективности, часто требуется уменьшить размер итогового исполняемого файла. Компилятор GCC предоставляет ряд флагов и подходов для достижения этой цели.
+При разработке программ, особенно для встраиваемых систем, дистрибутивов с ограниченным объёмом или просто для повышения эффективности, часто требуется уменьшить размер итогового исполняемого файла. Компилятор G++ предоставляет ряд флагов и подходов для достижения этой цели.
 
 #### Основные флаги компиляции
 
@@ -190,6 +216,20 @@ strip --strip-debug --strip-unneeded program_with_debug.exe -o program.exe
 objcopy --only-keep-debug program_with_debug.exe program.debug
 ```
 Таким образом, `program.exe` будет компактным, а `program.debug` — содержать отладочную информацию для последующего анализа.
+
+#### Дополнительные флаги для минимизации размера:
+
+- **`-ffunction-sections -fdata-sections`** — размещает каждую функцию и переменную в отдельной секции. Это позволяет линковщику (`-Wl,--gc-sections`) удалить неиспользуемые секции, что может уменьшить размер.
+  ```powershell
+  g++ -Os -ffunction-sections -fdata-sections -s main.cpp formulas.cpp -o program.exe -Wl,--gc-sections
+  ```
+
+- **`-flto` (Link Time Optimization)** — может улучшить оптимизацию и уменьшить размер, но увеличивает время компиляции.
+  ```powershell
+  g++ -Os -flto -s main.cpp formulas.cpp -o program.exe
+  ```
+
+- **`-static-libgcc -static-libstdc++`** — статически линкует стандартные библиотеки GCC и C++. Это делает исполняемый файл больше, но *независимым* от наличия этих библиотек в системе пользователя. Если размер критичен и вы готовы, чтобы пользователь установил нужные библиотеки (например, MinGW-w64 runtime), *не используйте* эти флаги. Если важна *портативность*, можно их применить, но учитывайте увеличение размера.
 
 ---
 
@@ -245,7 +285,7 @@ g++ main.cpp -L. -lformulas -o program.exe
 ##### Дополнительные рекомендации
 
 - **Заголовочный файл**: рекомендуется создать файл `formulas.h`, содержащий объявления всех функций из `formulas.cpp`, и включать его в `main.cpp` с помощью `#include "formulas.h"`. Это обеспечивает корректную проверку типов и сигнатур функций.
-  
+
 - **Оптимизация при создании библиотеки**: для уменьшения итогового размера можно скомпилировать объектный файл с флагами оптимизации:
   ```powershell
   g++ -Os -c formulas.cpp -o formulas.o
@@ -261,50 +301,49 @@ g++ main.cpp -L. -lformulas -o program.exe
 
 ---
 
-### 6. Использование Visual Studio (IDE)
+### 6. Использование Visual Studio Code (IDE)
 
-Visual Studio — мощная интегрированная среда разработки (IDE) от Microsoft, поддерживающая разработку на C++, C#, Python и других языках. Для работы с C++ можно использовать **Visual Studio Community**, которая распространяется бесплатно и включает все необходимые инструменты для разработки настольных приложений на C++.
+Visual Studio Code (VS Code) — это лёгкий, но мощный текстовый редактор с открытым исходным кодом от Microsoft, который можно превратить в полнофункциональную среду разработки (IDE) для C++ с помощью расширений. Он отличается от полнофункциональной Visual Studio тем, что изначально предоставляет минимальный набор функций, расширяемый через плагины, и требует ручной настройки процесса сборки и отладки.
 
-#### Настройка и создание проекта
+#### Установка и настройка
 
-1. **Установка**  
-   При установке Visual Studio обязательно выберите рабочую нагрузку **Desktop development with C++** («Разработка классических приложений на C++»). Эта рабочая нагрузка включает:
-   - Компилятор MSVC (Microsoft Visual C++)
-   - Библиотеки времени выполнения C++
-   - Отладчик
-   - Инструменты сборки (MSBuild)
-   - Редактор кода с поддержкой IntelliSense
+1. **Установка VS Code**  
+   Скачайте и установите VS Code с официального сайта: [https://code.visualstudio.com/](https://code.visualstudio.com/)
 
-2. **Создание проекта**  
-   - Запустите Visual Studio.
-   - Выберите **Create a new project**.
-   - Выберите шаблон **Console App** (или **Empty Project**, если требуется полный контроль над структурой).
-   - Укажите имя проекта и расположение на диске.
+2. **Установка расширения для C++**  
+   После запуска VS Code откройте палитру команд (`Ctrl+Shift+P`) и введите `Extensions: Install Extensions`. Найдите и установите официальное расширение **C/C++** от Microsoft.
 
-3. **Добавление файлов**  
-   В обозревателе решений (Solution Explorer):
-   - Щёлкните правой кнопкой мыши по проекту → **Add** → **Existing Item…**
-   - Добавьте файлы: `main.cpp`, `formulas.cpp`, `formulas.h`, `quadratic_tests.cpp`.
-   - Убедитесь, что заголовочный файл `formulas.h` включён в соответствующие `.cpp`-файлы с помощью директивы `#include "formulas.h"`.
+3. **Установка отладчика (если ещё не установлен)**  
+   Обычно расширение C/C++ устанавливает отладчик (например, `gdb` для MinGW-w64) автоматически, если он обнаруживается в системе (проверьте, что `g++.exe` и `gdb.exe` доступны через переменную `PATH`, как описано в разделе 1).
 
-4. **Компиляция и запуск**  
-   - Нажмите **Ctrl+F5** для запуска без отладки или **F5** для запуска с отладчиком.
-   - Visual Studio автоматически скомпилирует все файлы проекта и соберёт исполняемый файл.
+4. **Создание проекта**  
+   Откройте папку с вашим проектом (например, `C:\projects\quadratic`) через `File -> Open Folder`.
 
-#### Преимущества использования Visual Studio
+5. **Добавление файлов**  
+   Файлы (`main.cpp`, `formulas.cpp`, `formulas.h`, `quadratic_tests.cpp`) должны отображаться в проводнике слева. Просто добавьте их в папку проекта.
 
-- **Встроенная отладка**: пошаговое выполнение кода, точки останова (breakpoints), просмотр значений переменных, стек вызовов.
-- **IntelliSense**: интеллектуальное автозавершение кода, подсказки по сигнатурам функций, навигация по определениям.
-- **Интеграция с системами контроля версий**: поддержка Git прямо в интерфейсе IDE (коммиты, пуллы, ветвление и т.д.).
-- **Управление проектом через графический интерфейс**: удобное добавление/удаление файлов, настройка свойств сборки (конфигурации Debug/Release), управление зависимостями.
-- **Анализ кода и диагностика**: встроенные инструменты для выявления потенциальных ошибок, утечек памяти, неиспользуемых переменных.
-- **Поддержка современных стандартов C++**: можно указать версию стандарта (C++17, C++20 и др.) в свойствах проекта.
+6. **Компиляция и запуск**  
+   VS Code не компилирует код автоматически. Компиляцию нужно выполнять вручную через встроенную в редактор консоль (Terminal -> New Terminal) или внешнюю командную строку, используя команды, описанные в разделе 3.  
+   ```powershell
+   g++ main.cpp formulas.cpp -o program.exe
+   .\program.exe
+   ```
+   Также можно настроить задачи (`Tasks`) в VS Code для выполнения этих команд через меню `Terminal -> Run Task`.
+
+#### Преимущества использования Visual Studio Code
+
+- **Лёгкий и быстрый**: Запускается и работает быстрее, чем полнофункциональная IDE.
+- **Высокая настраиваемость**: Плагины позволяют адаптировать редактор под любые нужды.
+- **Отличная поддержка Git**: Встроенный интерфейс для Git.
+- **Интеграция с терминалом**: Встроенный терминал для выполнения команд компиляции и отладки.
+- **IntelliSense**: Подсветка синтаксиса, автодополнение, переход к определениям (требует правильной настройки `c_cpp_properties.json`).
+- **Работа с разными компиляторами**: Легко настраивается под MinGW-w64, Clang, MSVC и другие.
 
 #### Дополнительные возможности
 
-- **Конфигурации сборки**: по умолчанию создаются две конфигурации — **Debug** (с отладочной информацией, без оптимизации) и **Release** (с оптимизацией, без отладочной информации). Переключение между ними осуществляется в верхней панели.
-- **Настройка компилятора**: через **Project Properties** можно задать дополнительные флаги компиляции, пути к заголовочным файлам, параметры линковки и т.д.
-- **Тестирование**: если используется `quadratic_tests.cpp` для модульных тестов, можно интегрировать его в проект и запускать как часть процесса сборки или настроить отдельный тестовый проект с использованием фреймворков, таких как Google Test (поддерживается через NuGet или вручную).
+- **Файлы настроек**: `.vscode/settings.json`, `.vscode/c_cpp_properties.json`, `.vscode/tasks.json`, `.vscode/launch.json` позволяют настроить поведение редактора, пути к заголовкам, задачи сборки и отладки.
+- **Работа с несколькими компиляторами**: Можно легко переключаться между разными установленными компиляторами.
+- **Расширения**: Существует множество расширений для линтов (например, `cpplint`, `clang-format`), работы с тестами и т.д.
 
 ---
 
@@ -341,12 +380,13 @@ build/
 
 ### Заключение
 
-В ходе работы была настроена среда для разработки на C++ в Windows: установлен компилятор MinGW-w64, настроены переменные среды и освоены основные команды PowerShell. Программа для решения квадратных уравнений была успешно скомпилирована как через командную строку, так и в среде Visual Studio.
+В ходе работы была настроена среда для разработки на C++ в Windows: установлен компилятор MinGW-w64, настроены переменные среды и освоены основные команды PowerShell. Программа для решения квадратных уравнений была успешно скомпилирована через командную строку.
 
 Рассмотрены ключевые аспекты сборки:
 - Базовая компиляция нескольких исходных файлов
-- Оптимизация размера исполняемого файла с помощью флагов `-Os` и `-s`
+- Оптимизация размера исполняемого файла с помощью флагов `-Os`, `-s`, `-ffunction-sections`, `-fdata-sections`, `-Wl,--gc-sections` и других (Минимизация размера)
 - Создание и использование статических библиотек
-- Альтернативные подходы к сборке через IDE
+- Альтернативные подходы к разработке через редактор VS Code (IDE)
+- Основные команды работы с файлами и консолью (Консоль)
 
-Освоение этих методов позволяет эффективно работать над проектами любой сложности, выбирая оптимальный способ сборки в зависимости от требований к размеру программы, производительности и удобству разработки.
+Освоение этих методов позволяет эффективно работать над проектами любой сложности, выбирая оптимальный способ сборки и разработки в зависимости от требований к размеру программы, производительности и удобству разработки.
